# TimerUtility

./: .clang-format  .cmake-format  .gitignore  .hgignore  CMakeLists.txt  Callgrind.cpp  Callgrind.h  Makefile  MemoryApp.cpp  MemoryApp.h  ProfilerApp.cpp  ProfilerApp.h  ProfilerApp.hpp  ProfilerAppClasses.h  ProfilerAppMacros.h  ProfilerAppMacros_C.h  ProfilerAppMacros_Fortran.h  ProfilerAtomicHelpers.cpp  ProfilerAtomicHelpers.h  Readme.txt  SoftwareLicense.txt  ValgrindSuppresionFile  cppcheckSuppressionFile  get_memory_time.cpp  load_timer.fig  load_timer.m  load_timer_file.cpp  load_timer_set.m  plot_trace.fig  plot_trace.m  uint16f.h
cmake/: DummyTimer.cmake.in  FindCppcheck.cmake  FindCppclean.cmake  FindValgrind.cmake  QWT.patch  QWT.patch.cmake  Timer.cmake.in  UseDoxygen.cmake  WriteRepoVersion.cmake  configure_GUI.cmake  ctest_script.cmake  libraries.cmake  macros.cmake  run.cppclean.template.cmake
doxygen/: Doxyfile.in  DoxygenMainpage.h
doxygen/html/: header.html
fortran/: FortranModule.F
gui/: Array.h  CMakeLists.txt  GuiTimerStructures.h  LoadBalance.cpp  LoadBalance.h  MemoryPlot.cpp  MemoryPlot.h  QSplitterGrid.cpp  TableValue.h  UtilityMacros.h  colormap.h  load_timer.cpp  memorywindow.cpp  memorywindow.h  timerwindow.cpp  timerwindow.h  tracewindow.cpp  tracewindow.h
latex_docs/: CMakeLists.txt  TimerUtility.tex
matlab/: CMakeLists.txt  compare_runs.m  load_timer_file.cpp  load_timer_set.m  matlab_helpers.h  plot_trace.fig  profile_mex.cpp
matlab/test/: CMakeLists.txt  test_profiler.m
spack-repo/: repo.yaml
src/: CMakeLists.txt  Callgrind.cpp  Callgrind.h  MemoryApp.cpp  MemoryApp.h  ProfilerApp.cpp  ProfilerApp.h  ProfilerApp.hpp  ProfilerAppClasses.h  ProfilerAppMacros.h  ProfilerAppMacros_C.h  ProfilerAppMacros_Fortran.h  ProfilerAtomicHelpers.cpp  ProfilerAtomicHelpers.h  ProfilerThreadID.cpp  ProfilerThreadID.h  ValgrindSuppresionFile  cppcheckSuppressionFile
src/cmake/: FindCppcheck.cmake  FindCppclean.cmake  Find_BLAS_LAPACK.cmake  Find_QT.cmake  WriteCompilerFeatures.cmake  WriteRepoVersion.cmake  cppcheck.cmake  ctest_script.cmake  libraries.cmake  macros.cmake  run.cppclean.template.cmake
src/doxygen/: DoxygenMainpage.h
src/fortran/: FortranModule.F
src/gui/: Array.h  CMakeLists.txt  GuiTimerStructures.h  LoadBalance.cpp  LoadBalance.h  MemoryPlot.cpp  MemoryPlot.h  QSplitterGrid.cpp  QSplitterGrid.h  TableValue.h  ThreadedSlotsClass.cpp  ThreadedSlotsClass.h  application.qrc  colormap.h  load_timer.cpp  timerwindow.cpp  timerwindow.h  tracewindow.cpp  tracewindow.h
src/latex_docs/: CMakeLists.txt  TimerUtility.tex
src/matlab/: CMakeLists.txt  TraceClass.m  compare_runs_weak.m  get_active_times.cpp  get_memory_time.cpp  hello_world.cpp  load_timer.m  load_timer_file.cpp  load_timer_set.m  load_trace_file.m  matlab_helpers.h  plot_trace.m  profile_mex.cpp
src/matlab/test/: CMakeLists.txt  test_hello_world.m
src/test/: CMakeLists.txt  test_Callgrind.cpp  test_Helpers.h  test_Load.cpp  test_MemoryApp.cpp  test_ProfilerApp.cpp  test_ProfilerAppRegression.cpp  test_ProfilerApp_C.c
src/test/data/: set1.2.timer  set2.1.memory  set2.1.timer  set2.1.trace  set2.2.memory  set2.4.memory
test/: CMakeLists.txt  test_Helpers.h  test_Load.cpp  test_MemoryApp.cpp  test_ProfilerApp.cpp  test_ProfilerAppRegression.cpp  test_ProfilerApp_C.c  test_ProfilerApp_Fortran.F
test/data/: ASE.0.timer  set1.1.timer  set1.3.timer  set1.4.timer  set2.2.timer  set2.2.trace  set2.3.memory  set2.3.timer  set2.3.trace  set2.4.timer  set2.4.trace
